# detector

./: .gitignore  CVEMonitor_scheduler.db  CVEMonitor_worker.db  api.py  celerybeat-schedule.db  common.py  config.py  log.py  main.py  pyproject.toml  readme.md  requirements.txt  rerun.sh  run.sh  scheduler.py  task.py  test.py
logs/: celery.info  celery_beat.info  celery_common.info  celery_worker.info
