[tool.poetry]
name = "detector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"
public = "^2020.12.3"
replit = "^2.0.0"
celery = "^5.0.5"
conf = "^0.4.1"
termcolor = "^1.1.0"
yagmail = "^0.14.245"
progressbar = "^2.5"
pickledb = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
